# NLP-Project

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: ds_zero3_bf16.json  qwen3_32b_full_sft_stage1_8gpu_smoke.yaml  qwen3_32b_full_sft_stage1_smoke.yaml
configs/deepspeed/: zero3_bf16.json
configs/training/: qwen3_32b_stage1_8gpu_smoke.yaml  qwen3_32b_stage1_bestval_from1000.yaml  qwen3_32b_stage1_full.yaml  qwen3_32b_stage1_smoke.yaml  qwen3_32b_stage2_full.yaml
docs/: data-download.md
report/: midterm_report.aux  midterm_report.fdb_latexmk  midterm_report.fls  midterm_report.out  midterm_report.tex  midterm_report.xdv
report/data/: eval_from1000.csv  eval_loss.csv  eval_loss_plot.csv  eval_stage1_full.csv  examples.json  stage2_categories.csv  stage2_years.csv  summary.json  train_from1000.csv  train_points.csv  train_points_plot.csv  train_stage1_full.csv  wandb_summaries.csv
report/scripts/: build_report_assets.py
scripts/: download_raw_datasets.sh  evaluate.py  inspect_model.py  prepare_stage1_data.py  run_qwen3_32b_smoke.sh  run_smoke_test.sh  train_sft.py  validate_sft_data.py
scripts/training/: train_sft.py  (+2 more)
tests/: test_compatibility_entrypoints.py  test_data_processing.py  test_deepspeed_config.py  test_evaluation.py  test_model_inventory.py  test_package.py  test_qwen3_32b_runner.py  test_sft_format.py  test_stage2_collection.py  test_stage2_html.py  test_stage2_pipeline.py  test_stage2_scripts.py  test_stage2_segments.py  test_stage2_teacher_translation.py  test_tokenizer_loading.py  test_train_script_import.py  test_train_sft.py  test_training_config.py  test_training_data.py  test_validate_sft_data_script.py
wandb/: latest-run
(+63 files in other folders)
