[project]
name = "qwen-paper-translation-sft"
version = "0.1.0"
description = "Full-parameter SFT environment for Qwen English-to-Chinese CS/AI paper translation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "deepspeed>=0.16.7",
    "einops>=0.8.1",
    "evaluate>=0.4.3",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.31.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "protobuf>=4.25.0,<5.0.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.0",
    "trl>=0.17.0",
    "unbabel-comet>=2.2.6",
    "wandb>=0.19.11",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.9.0",
]
quality = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux' and python_version == '3.12'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
